@@ -131,6 +131,10 @@ change between module versions.
 
 =item *
 
+Consistent encoding of integers are strings.
+
+=item *
+
 Classes can be extended with hooks for JSON serialization.
 
 =item *
@@ -180,6 +184,16 @@ sub signature {
 }
 
 =head1 LIMITATIONS
+
+=head2 Encoding
+
+The default JSON serializer will use UTF-8 encoding by default, which
+generally removes an issue with L<Storable> when identical strings
+have different encodings.
+
+Numeric values may be inconsistently represented if they are not
+numified, e.g. C<"123"> vs C<123> may not produce the same JSON. (This too
+is an issue with C<Storable>.)
 
 =head2 Signatures for Arbitrary Objects
 
@@ -252,7 +266,8 @@ This uses L<Storable> to serialise objects and generate a MD5
 hexidecimal string as a signature.
 
 This has the drawback that machines with different architectures,
-different versions of Perl, or different versions L<Storable> may not
+different versions of Perl, or different versions L<Storable>, or in
+some cases different encodings of the same scalar, may not
 produce the same signature for the same data. (This does not mean that
 L<Storable> is unable to de-serialize data produced by different
 versions; it only means that the serialized data is not identical
