@@ -2,6 +2,8 @@ Revision history for perl distribution {{$dist->name}}:
 
 {{$NEXT}}
   [Documentation]
+  - Updated notes about encodings and numification.
+
   - Updated copyright year.
 
   - Adjusted POD markup.
